<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_updateName"
        app:layout_constraintEnd_toStartOf="@+id/btn_thousand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Surname"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/Age"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_surname" />

    <Button
        android:id="@+id/btn_dlt"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:text="@string/deleteAll"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Add"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_viewAll"
        app:layout_constraintStart_toEndOf="@+id/btn_dlt" />

    <Button
        android:id="@+id/btn_delOne"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:text="@string/Delete"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Update"
        app:layout_constraintEnd_toStartOf="@+id/btn_Update"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Update"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginBottom="4dp"
        android:text="@string/update"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toEndOf="@+id/btn_delOne" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:text="@string/search"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Update" />

    <Button
        android:id="@+id/btn_viewAll"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ViewAll"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add" />

    <EditText
        android:id="@+id/et_updateName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/UpdateName"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_delOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_thousand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1000"
        app:layout_constraintBottom_toBottomOf="@+id/txt_list"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>